[package]
name = "pic"
version = "0.1.0"
authors = ["Robaire Galliath"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[features]
default = ["dev"]
dev = ["console_error_panic_hook", "wasm-logger"]
prod = ["wee_alloc"]

[dependencies]
wasm-bindgen = "0.2.74"
console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.5", optional = true }
log = "0.4.14"
wasm-logger = { version = "0.2.0", optional = true }

[profile.release]
lto = true
opt-level = 's'
